--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: R_package_Baruwal
+Package: BaruwalRPackage
 Title: R-Package for posterior predictive simulation
 Version: 0.0.0.9000
 Authors@R: 
